== Maintenance

* IMPORTANT:

  * If you use the ruby command to run specs instead of the spec command, you'll
    need to require 'spec/autorun' or they won't run. This won't affect you if
    you use the spec command or the Spec::Rake::SpecTask that ships with RSpec.

  * You have to require 'spec/test/unit' to invoke test/unit interop if you're
    using RSpec's core (this is handled implicitly with spec-rails)

* deprecations

  * BaseTextFormatter#colourize - use colorize_failure instead.
  * BaseTextFormatter#magenta - use red instead.

* enhancements

  * allow registering example groups with a path-like key (Pat Maddox)
  * start DRb service at "druby://localhost:0" (Hongli Lai) - See http://redmine.ruby-lang.org/issues/show/496 
  * consistent reporting of errors as failures
  * added spec/test/unit as more intuitive path to loading test/unit interop lib
  * added explicit autorun feature for running specs with ruby command
  
* bug fixes

  * support delegating operator matchers to subject with should_not

=== Version 1.1.12 / 2009-01-11

WARNING: there was a stub/mock bug in 1.1.11 that allowed a structure that was
not intended:

  obj.stub!(:msg)
  obj.msg
  obj.should_receive(:msg)
  
That would pass in 1.1.11, but should not have been allowed to, since the
message is received before the expectation is set. This was reported (#637)
and fixed for release 1.1.12, but may cause unexpected failures if you had
examples set up as above.

WARNING: mock.should_receive(:msg).with(an_instance_of(klass)) now correctly uses instance_of? instead of kind_of?. This may break some existing code examples, but the fix is to just use kind_of instead of an_instance_of

* 3 deprecations

  * deprecated ExampleMethods#implementation_backtrace - use ExampleMethods#backtrace instead
  * deprecated ExampleGroupMethods#example_group_backtrace - use ExampleGroupMethods#backtrace instead
  * deprecated Spec::Example::BehaviourRunner class (likely that nobody is using this)
