@@ -6,13 +6,16 @@
     need to require 'spec/autorun' or they won't run. This won't affect you if
     you use the spec command or the Spec::Rake::SpecTask that ships with RSpec.
 
-  * You have to require 'spec/test/unit' to invoke test/unit interop if you're
-    using RSpec's core (this is handled implicitly with spec-rails)
+  * require 'spec/test/unit' to invoke test/unit interop if you're using
+    RSpec's core (this is handled implicitly with spec-rails)
 
 * deprecations
 
   * BaseTextFormatter#colourize - use colorize_failure instead.
   * BaseTextFormatter#magenta - use red instead.
+  * setup/teardown is gone - use before/after instead
+    * you can still use setup/teardown if you're using Test::Unit::TestCase as
+      the base ExampleGroup class
 
 * enhancements
 
